--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,11 @@ body {
 
 /* Hero-section */
 .hero-section {
-  background-color: var(--color-hero-background);
   text-align: center;
+  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: var(--color-hero-background);
 
   padding-top: 188px;
   padding-bottom: 188px;
@@ -206,6 +209,15 @@ body {
   margin-bottom: 8px;
 }
 
+.features-icon-wrap{
+  background-color: var(--color-light);
+    border-radius: 4px;
+      width: 264px;
+        height: 112px;
+    margin-bottom: 8px;
+    padding: 24px 100px;
+}
+
 /* Services */
 .services-section {
   padding-bottom: 120px;
@@ -227,7 +239,7 @@ body {
 .team-section {
   background-color: var(--color-light);
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 110px;
 }
 
 .team-list {
@@ -245,12 +257,77 @@ body {
 }
 
 .card-desc {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
+  padding: 32px 16px;
+ }
 
 .team-title {
   margin-bottom: 8px;
+}
+
+.team-text{
+  margin-bottom: 8px;
+}
+
+.social-media-list{
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-media-link{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-primary-brand);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-media-link:hover,
+.social-media-link:focus{
+  background-color: var(--color-pressed-state);
+}
+
+.social-media-icon{
+width: 16px;
+height: 16px;
+}
+
+/* Customers */
+
+.customers-section{
+  padding-top: 110px;
+  padding-bottom: 120px;
+}
+
+.customers-list{
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customers-link{
+  display: flex;
+  border: 1px solid var(--color-subtle-text);
+  border-radius: 4px;
+  padding: 16px 32px;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--color-pressed-state);
+}
+
+.customers-logo{
+  width: 104px;
+  height: 56px;
+  fill: var(--color-subtle-text)
+}
+
+.customers-link:hover .customers-logo,
+.customers-link:focus .customers-logo {
+  fill: var(--color-pressed-state);
 }
 
 /* Footer */
@@ -258,6 +335,14 @@ body {
   background-color: var(--color-hero-background);
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer-container{
+  display: flex;
+}
+
+.footer-left-side{
+  margin-right: 120px;
 }
 
 .logo-footer {
@@ -270,6 +355,27 @@ body {
   margin-top: 16px;
 }
 
+.media-text{
+  margin-bottom: 16px;
+  font-weight: 500;
+       color: var(--color-white);
+}
+
+.footer-media-link{
+  background-color: rgba(255, 255, 255, 0.1);;
+}
+
+
+.footer-media-link:hover,
+.footer-media-link:focus{
+  background-color: var(--color-success);
+
+}
+
+.footer-media-icon{
+  width: 24px;
+  height: 24px;
+}
 
 /* Portfolio */
 .portfolio-section {
@@ -312,6 +418,7 @@ body {
 
 .portfolio-card-desc {
   padding: 32px 16px;
+    border: 1px solid var(--color-accent);
 }
 
 .portfolio-title {
@@ -324,6 +431,13 @@ body {
 
 .portfolio-item {
   max-width: 360px;
-  border: 1px solid var(--color-accent);
   flex-basis: calc(100%/3 - var(--card-gap));
 }
+
+.portfolio-link:hover .portfolio-card-desc,
+.portfolio-link:focus .portfolio-item{
+border: 1px solid #F4F4FD;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+}
+
