--- a/css/styles.css
+++ b/css/styles.css
@@ -158,10 +158,12 @@ body {
 /* Hero-section */
 .hero-section {
   text-align: center;
-  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   background-color: var(--color-hero-background);
+
 
   padding-top: 188px;
   padding-bottom: 188px;
@@ -203,19 +205,25 @@ body {
 .features-list {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+}
+
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
 }
 
 .features-title {
   margin-bottom: 8px;
 }
 
-.features-icon-wrap{
+.features-icon-wrap {
+  display: flex;
   background-color: var(--color-light);
-    border-radius: 4px;
-      width: 264px;
-        height: 112px;
-    margin-bottom: 8px;
-    padding: 24px 100px;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 24px 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Services */
@@ -253,28 +261,28 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  flex-basis: calc(100%/4 - var(--card-gap));
+  flex-basis: calc(100%/4 - var(--card-gap) * 3);
 }
 
 .card-desc {
   padding: 32px 16px;
- }
+}
 
 .team-title {
   margin-bottom: 8px;
 }
 
-.team-text{
+.team-text {
   margin-bottom: 8px;
 }
 
-.social-media-list{
+.social-media-list {
   display: flex;
   justify-content: center;
   gap: 24px;
 }
 
-.social-media-link{
+.social-media-link {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -285,29 +293,29 @@ body {
 }
 
 .social-media-link:hover,
-.social-media-link:focus{
+.social-media-link:focus {
   background-color: var(--color-pressed-state);
 }
 
-.social-media-icon{
-width: 16px;
-height: 16px;
+.social-media-icon {
+  width: 16px;
+  height: 16px;
 }
 
 /* Customers */
 
-.customers-section{
+.customers-section {
   padding-top: 110px;
   padding-bottom: 120px;
 }
 
-.customers-list{
+.customers-list {
   display: flex;
   justify-content: center;
   gap: 24px;
 }
 
-.customers-link{
+.customers-link {
   display: flex;
   border: 1px solid var(--color-subtle-text);
   border-radius: 4px;
@@ -319,7 +327,7 @@ height: 16px;
   border-color: var(--color-pressed-state);
 }
 
-.customers-logo{
+.customers-logo {
   width: 104px;
   height: 56px;
   fill: var(--color-subtle-text)
@@ -337,11 +345,11 @@ height: 16px;
   padding-bottom: 100px;
 }
 
-.footer-container{
+.footer-container {
   display: flex;
 }
 
-.footer-left-side{
+.footer-left-side {
   margin-right: 120px;
 }
 
@@ -355,24 +363,25 @@ height: 16px;
   margin-top: 16px;
 }
 
-.media-text{
+.media-text {
   margin-bottom: 16px;
   font-weight: 500;
-       color: var(--color-white);
+  color: var(--color-white);
 }
 
-.footer-media-link{
-  background-color: rgba(255, 255, 255, 0.1);;
+.footer-media-link {
+  background-color: rgba(255, 255, 255, 0.1);
+  ;
 }
 
 
 .footer-media-link:hover,
-.footer-media-link:focus{
+.footer-media-link:focus {
   background-color: var(--color-success);
 
 }
 
-.footer-media-icon{
+.footer-media-icon {
   width: 24px;
   height: 24px;
 }
@@ -418,7 +427,7 @@ height: 16px;
 
 .portfolio-card-desc {
   padding: 32px 16px;
-    border: 1px solid var(--color-accent);
+  border: 1px solid var(--color-accent);
 }
 
 .portfolio-title {
@@ -431,13 +440,12 @@ height: 16px;
 
 .portfolio-item {
   max-width: 360px;
-  flex-basis: calc(100%/3 - var(--card-gap));
+  flex-basis: calc(100%/3 - var(--card-gap) * 2);
 }
 
 .portfolio-link:hover .portfolio-card-desc,
-.portfolio-link:focus .portfolio-item{
-border: 1px solid #F4F4FD;
+.portfolio-link:focus .portfolio-item {
+  border: 1px solid #F4F4FD;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
-
