--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ ul {
 
 .list {
   list-style: none;
+  max-width: 100%;
+  height: auto;
 }
 
 img {
@@ -108,12 +110,16 @@ body {
 
 /* Header */
 .page-header {
+  border-bottom: 1px solid var(--color-accent);
+}
+
+.header-container {
   display: flex;
   justify-content: space-between;
   padding-top: 24px;
   padding-bottom: 24px;
-  border-bottom: 1px solid var(--color-accent);
 }
+
 
 .header-logo {
   color: var(--color-dark);
@@ -160,10 +166,9 @@ body {
   text-align: center;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
   background-color: var(--color-hero-background);
-
+  /* background-size: cover; */
 
   padding-top: 188px;
   padding-bottom: 188px;
@@ -241,6 +246,7 @@ body {
   max-width: 360px;
   background: linear-gradient(0deg, rgba(77, 90, 229, 0.1), rgba(77, 90, 229, 0.1));
   border: 1px solid var(--color-accent);
+  flex-basis: calc((100% - 48px) / 3);
 }
 
 /* Team */
@@ -439,7 +445,6 @@ body {
 }
 
 .portfolio-item {
-  max-width: 360px;
   flex-basis: calc(100%/3 - var(--card-gap) * 2);
 }
 
